2010-08-31 Markus Stauffiger <markus-at-4eyes.ch>
	* Updated typoscript documentation
	* Added manual

2010-08-30 Markus Stauffiger <markus-at-4eyes.ch>
	* Added typoscript documentation
	* Added/corrected xclasses
	* Added draft documentation
	* Deactivated department fields in tca

2010-08-25 Michel Georgy <michel-at-4eyes.ch>
	* fixed possible sql injections

2010-08-25 Markus Stauffiger <markus-at-4eyes.ch>
	* Cleaned up code
	* Documented

2010-07-09 by alessandro-at-4eyes.ch
	* Start Year for displaying publications is now configurable in typoscript by setting eg. "plugin.tx_x4epublication_pi1.startYear = 1998"

2005-09-10 Markus Stauffiger  <markus-at-4eyes.ch>
	* Initial release